--- a/index.html
+++ b/index.html
@@ -445,6 +445,9 @@
                     <a href="https://twitter.com/WonkonSOL" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
                         <i class="fa-brands fa-twitter"></i> Twitter
                     </a>
+                    <a href="https://www.tiktok.com/@wonkonsol?_t=8lH6sE3Xedd" target="_new" style="    margin-right: 1rem;" class="" data-splitting>
+                        <i class="fa-brands fa-tiktok"></i> TikTok
+                    </a>
 
                 </div>
             </div>
@@ -481,8 +484,11 @@
                         <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="chart-button play-chart">
                             Chart
                         </a>
-                        <a href="#" target="_new" class="buy-button contract_btn ">
+                        <a href="https://truffle.wtf/project/candy-nbnub" target="_new" class="buy-button contract_btn ">
                             MINT NFT
+                        </a>
+                        <a href="https://magiceden.io/marketplace/AGTvGnMLv1bhkqXQBiq2Q1zB1GJZ2cLSy8oQpKWvxtFh" target="_new" class="telegram-button telegram-join">
+                            MAGIC EDEN
                         </a>
                         <!-- <a style="font-size:1rem" href="javascript:void(0)" class="btn d-block bg-gold mt-5 custom-btn smoothscroll play-thething">
                             <i class="fa-solid fa-play"></i><span class="playthisthing"> Play Kitty Kneads More
@@ -626,7 +632,7 @@ Let's make magic happen! 🚀
                                     </p>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Liquidity</small></h3>
 
-                                    <p>69.000.000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    <p>100,000,000 <span style="color:#bb7b01" data-splitting> $WONK
                                     </span> (100%)</p>
                                     <h3 class="">
                                         <small class="renounsecOwner">
@@ -721,22 +727,6 @@ Let's make magic happen! 🚀
 
 
     <footer class="site-footer">
-        <div class="site-footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-6 col-12">
-                        <h2 class=" mb-lg-0">
-
-                        </h2>
-                    </div>
-
-                    <div class="col-lg-6 col-12 d-flex justify-content-lg-end align-items-center">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <div class="container">
             <div class="row">
@@ -789,8 +779,17 @@ Let's make magic happen! 🚀
                     <a href="https://t.me/WonkPortal" target="_new" class=" color-contrast-higher mt-3 telegram-join" style="    margin-right: 1rem;">
                         <i class="fa-brands fa-telegram"></i><span class="telegram-join">Telegram</span>
                     </a>
-                    <a href="https://twitter.com/WonkonSOL" target="_new" class=" color-contrast-higher mt-3">
-                        <i class="fa-brands fa-twitter"></i> Twitter
+                    <a href="https://twitter.com/WonkonSOL" target="_new" class=" color-contrast-higher mt-3" style="    margin-right: 1rem;">
+                        <i class="fa-brands fa-twitter"></i> <span class="telegram-join">Twitter</span>
+                    </a>
+                    <a href="https://discord.gg/Yn9CNFbm" target="_new" class=" color-contrast-higher mt-3" style="    margin-right: 1rem;">
+                        <i class="fa-brands fa-discord"></i> <span class="telegram-join">Discord</span>
+                    </a>
+                    <a href="https://discord.gg/Yn9CNFbm" target="_new" class=" color-contrast-higher mt-3" style="    margin-right: 1rem;">
+                        <i class="fa-brands fa-tiktok"></i> <span class="telegram-join">TikTok</span>
+                    </a>
+                    <a href="https://www.instagram.com/wonksolana?igsh=MTRybGk4bGtwa3FweQ%3D%3D&utm_source=qr" target="_new" class=" color-contrast-higher  mt-3">
+                        <i class="fa-brands fa-instagram"></i> <span class="telegram-join">Instagram</span>
                     </a>
 
                 </div>
@@ -833,6 +832,10 @@ Let's make magic happen! 🚀
                             <li class="site-footer-link-item">
                                 <a href="https://twitter.com/WonkonSOL" target="_new" class="site-footer-link"> <i
                                         class="fa-brands fa-twitter"></i> Twitter</a>
+                            </li>
+                            <li class="site-footer-link-item">
+                                <a href="https://www.tiktok.com/@wonkonsol?_t=8lH6sE3Xedd" target="_new" class="site-footer-link"> <i
+                                        class="fa-brands fa-tiktok"></i> TikTok</a>
                             </li>
 
 
