--- a/index.html
+++ b/index.html
@@ -497,6 +497,8 @@
 
                     </div>
 
+            
+
                     <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
 
 
@@ -518,7 +520,63 @@
             </div>
         </section>
 
+        <div class="container d-flex justify-content-center align-items-center">
+            <div class="row">
 
+                <div class="col-12 mt-auto mb-5 text-center">
+
+                    <h1 class="introt" style="">
+                        <div data-splitting>OUR PARTNERS</div>
+                    </h1>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/solana.webp" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/solscan.webp" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/pinksale.png" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/Phantom.webp" alt="" width="200px">
+                    </a>
+
+                </div>
+                <div class="col-12 mt-auto mb-5 text-center">
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/Phantom.webp" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/ray.png" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/jup.png" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/cmc.webp" alt="" width="200px">
+                    </a>
+                </div>
+                <div class="col-12 mt-auto mb-5 text-center">
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/dexv.png" alt="" width="200px">
+                    </a>
+                    <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new">
+                        <img src="/yahoo.png" alt="" width="200px">
+                    </a>
+                </div>
+
+    
+                <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
+
+
+                    <div class="location-wrap mx-auto py-3 py-lg-0">
+
+                    </div>
+
+                    <!--  -->
+                </div>
+            </div>
+        </div>
         <section class="about-section section-padding" id="about">
             <div class="container">
                 <div class="row">
