--- a/index.html
+++ b/index.html
@@ -528,32 +528,32 @@
                     <h1 class="introt" style="">
                         <div data-splitting>OUR PARTNERS</div>
                     </h1>
-                    <a href="#" target="_new">
+                    <a href="https://solana.com/" target="_new">
                         <img src="/solana.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://solscan.io/" target="_new">
                         <img src="/solscan.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://www.pinksale.finance/" target="_new">
                         <img src="/pinksale.png" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="phantom.app" target="_new">
                         <img src="/Phantom.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://raydium.io/" target="_new">
                         <img src="/ray.png" alt="" width="200px">
                     </a>
 
                 </div>
                 <div class="col-12 mt-auto mb-5 text-center">
                   
-                    <a href="#" target="_new">
+                    <a href="jup.ag" target="_new">
                         <img src="/jup.png" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://coinmarketcap.com/" target="_new">
                         <img src="/cmc.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://www.dexview.com/" target="_new">
                         <img src="/dexv.png" alt="" width="200px">
                     </a>
                     <a href="#" target="_new">
