--- a/index.html
+++ b/index.html
@@ -528,32 +528,32 @@
                     <h1 class="introt" style="">
                         <div data-splitting>OUR PARTNERS</div>
                     </h1>
-                    <a href="https://solana.com/" target="_new">
+                    <a href="#" target="_new">
                         <img src="/solana.webp" alt="" width="200px">
                     </a>
-                    <a href="https://solscan.io/" target="_new">
+                    <a href="#" target="_new">
                         <img src="/solscan.webp" alt="" width="200px">
                     </a>
-                    <a href="https://www.pinksale.finance/" target="_new">
+                    <a href="#" target="_new">
                         <img src="/pinksale.png" alt="" width="200px">
                     </a>
-                    <a href="phantom.app" target="_new">
+                    <a href="#" target="_new">
                         <img src="/Phantom.webp" alt="" width="200px">
                     </a>
-                    <a href="https://raydium.io/" target="_new">
+                    <a href="#" target="_new">
                         <img src="/ray.png" alt="" width="200px">
                     </a>
 
                 </div>
                 <div class="col-12 mt-auto mb-5 text-center">
                   
-                    <a href="jup.ag" target="_new">
+                    <a href="#" target="_new">
                         <img src="/jup.png" alt="" width="200px">
                     </a>
-                    <a href="https://coinmarketcap.com/" target="_new">
+                    <a href="#" target="_new">
                         <img src="/cmc.webp" alt="" width="200px">
                     </a>
-                    <a href="https://www.dexview.com/" target="_new">
+                    <a href="#" target="_new">
                         <img src="/dexv.png" alt="" width="200px">
                     </a>
                     <a href="#" target="_new">
@@ -593,7 +593,9 @@
 
 Let's make magic happen! 🚀
                                 </p>
-                                 
+                                <a href="whiterpaper.pdf" target="_new" class="telegram-button telegram-join">
+                                    WHITREPAPER
+                                </a>
 
                                 <!-- <p style="    word-spacing: 10px;">
                                     <span style="color:#bb7b01" data-splitting>Please note: 
@@ -684,7 +686,7 @@ Let's make magic happen! 🚀
                                 </div>
                                 <div>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Supply</small></h3>
-                                    <p> 100.000.000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    <p> 69.000.000 <span style="color:#bb7b01" data-splitting> $WONK
                                     </span>
                                     </p>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Liquidity</small></h3>
