--- a/index.html
+++ b/index.html
@@ -469,7 +469,9 @@
 
                         <h3 class="introt ">
                             <div data-splitting> A place of blockchain magic and sweet surprises. 🎩✨</div>
-
+                            <a href="https://www.pinksale.finance/solana/launchpad/E8DXhQzGc3M4wWcQ2QiahCUtNJ2kLE9cgSUzr7oZiZx1" target="_new" class="chart-button play-chart" style="font-size: larger !important;">
+                                PRESALE LIVE
+                            </a>
                         </h3>
 
 
