--- a/index.html
+++ b/index.html
@@ -688,19 +688,39 @@ Let's make magic happen! 🚀
                                 </div>
                                 <div>
                                     <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Supply</small></h3>
-                                    <p> 69.000.000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    <p> 100,000,000 <span style="color:#bb7b01" data-splitting> $WONK
                                     </span>
                                     </p>
-                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Liquidity</small></h3>
+                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">PreSale</small></h3>
 
-                                    <p>100,000,000 <span style="color:#bb7b01" data-splitting> $WONK
-                                    </span> (100%)</p>
-                                    <h3 class="">
+                                    <p>50,000,000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    </span> (50%)</p>
+                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">CEX</small></h3>
+
+                                    <p>5,000,000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    </span> (5%)</p>
+                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Developing</small></h3>
+
+                                    <p>3,000,000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    </span> (3%)</p>
+                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">Advisor</small></h3>
+
+                                    <p>2,000,000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    </span> (2%)</p>
+                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">LP</small></h3>
+
+                                    <p>23,750,000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    </span> (23.75%)</p>
+                                    <h3 class="animate__animated animate__bounce animate__infinite"><small class="bAtL">BURN</small></h3>
+
+                                    <p>16,250,000 <span style="color:#bb7b01" data-splitting> $WONK
+                                    </span> (16.25%)</p>
+                                    <!-- <h3 class="">
                                         <small class="renounsecOwner">
                                         <a href="https://solscan.io/tx" target="_new"
                                             class="animate__animated  animate__infinite animate__tada contract_btn color-contrast-higher">LPs Burn
                                         </a> to sol 1nc1nerator </small>
-                                    </h3>
+                                    </h3> -->
                                     <br/>
                                 </div>
 
