--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                             <a id="modalTrigger" class="nav-link click-scroll buy_letsgo" href="#bread_community">Catpaper<sup></sup></a>
                         </li> -->
                         <li class="nav-item">
-                            <a class="nav-link click-scroll play-chart" href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new">Chart</a>
+                            <a class="nav-link click-scroll play-chart" href="https://birdeye.so/token/DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq?chain=solana" target="_new">Chart</a>
                         </li>
 
                     </ul>
@@ -477,13 +477,13 @@
 
 
 
-                        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new" class="buy-button contract_btn ">
+                        <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq" target="_new" class="buy-button contract_btn ">
                             Buy Here
                         </a>
                         <a href="https://t.me/WonkPortal" target="_new" class="telegram-button telegram-join">
                             Telegram
                         </a>
-                        <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="chart-button play-chart">
+                        <a href="https://birdeye.so/token/DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq?chain=solana" target="_new" class="chart-button play-chart">
                             Chart
                         </a>
                         <a href="https://truffle.wtf/project/candy-nbnub" target="_new" class="buy-button contract_btn ">
@@ -530,32 +530,32 @@
                     <h1 class="introt" style="">
                         <div data-splitting>OUR PARTNERS</div>
                     </h1>
-                    <a href="#" target="_new">
+                    <a href="https://solana.com/" target="_new">
                         <img src="/solana.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://solscan.io/" target="_new">
                         <img src="/solscan.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://www.pinksale.finance/" target="_new">
                         <img src="/pinksale.png" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="Phantom.app" target="_new">
                         <img src="/Phantom.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://raydium.io/" target="_new">
                         <img src="/ray.png" alt="" width="200px">
                     </a>
 
                 </div>
                 <div class="col-12 mt-auto mb-5 text-center">
                   
-                    <a href="#" target="_new">
+                    <a href="jup.ag" target="_new">
                         <img src="/jup.png" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="coinmarketcap.com" target="_new">
                         <img src="/cmc.webp" alt="" width="200px">
                     </a>
-                    <a href="#" target="_new">
+                    <a href="https://www.dexview.com/solana/DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq" target="_new">
                         <img src="/dexv.png" alt="" width="200px">
                     </a>
                     <a href="#" target="_new">
@@ -645,8 +645,8 @@ Let's make magic happen! 🚀
                         </h2>
                         <p class="text-center">
 
-                            <a style="color:#bb7b01 !important" id="copy-button" class="caAddrr animate__animated contract_btn animate__infinite animate__wobble" data-text="0x000000000000000" href="javascript:void(0)">
-                                0x000000000000000
+                            <a style="color:#bb7b01 !important" id="copy-button" class="caAddrr animate__animated contract_btn animate__infinite animate__wobble" data-text="DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq" href="javascript:void(0)">
+                                DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq
                                 <i class="fa-solid fa-copy"></i>
 
                             </a>
@@ -727,7 +727,7 @@ Let's make magic happen! 🚀
                             </div>
 
 
-                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000">
+                            <a class="link-fx-1 color-contrast-higher mt-4 contract_btn" target="_new" href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq">
                                 <span class="buyHere contract_btn">Buy Here</span>
                                 <svg class="icon" viewBox="0 0 32 32" aria-hidden="true">
                                     <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round">
@@ -830,7 +830,7 @@ Let's make magic happen! 🚀
                         </li>
 
                         <li class="site-footer-link-item">
-                            <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="site-footer-link play-chart">Chart</a>
+                            <a href="https://birdeye.so/token/DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq?chain=solana" target="_new" class="site-footer-link play-chart">Chart</a>
                         </li>
 
 
@@ -896,12 +896,12 @@ Let's make magic happen! 🚀
                     <div class="col-lg-8 col-12 mt-lg-5">
                         <ul class="site-footer-links">
                             <li class="site-footer-link-item">
-                                <a href="https://birdeye.so/token/0x000000000000000?chain=solana" target="_new" class="buy_letsgo site-footer-link">
+                                <a href="https://birdeye.so/token/DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq?chain=solana" target="_new" class="buy_letsgo site-footer-link">
 
                                     <i class="fa-solid fa-chart-simple"></i> Birdeye</a>
                             </li>
                             <li class="site-footer-link-item">
-                                <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=0x000000000000000" target="_new" class="buy_letsgo site-footer-link">
+                                <a href="https://raydium.io/swap/?inputCurrency=sol&outputCurrency=DPAaG6Hq3h3DbZZYcTDaXt7ugkUxm2Q3sEdWUjWAgjCq" target="_new" class="buy_letsgo site-footer-link">
 
                                     <i class="fa-solid fa-right-left"></i>   Raydium</a>
                             </li>
